--- a/_config.yml
+++ b/_config.yml
@@ -283,6 +283,8 @@ defaults:
     values:
       layout: single
       author_profile: true
+      side_bar:
+        nav: "main"
       read_time: true
       comments: # true
       share: true
