--- a/_config.yml
+++ b/_config.yml
@@ -287,6 +287,7 @@ defaults:
       comments: # true
       share: true
       related: true
+      sidebar: true
   # _docs
   - scope:
       path: ""
