모든 포스트에 사이드바 보이도록2

--- a/_config.yml
+++ b/_config.yml
@@ -287,7 +287,8 @@ defaults:
       comments: # true
       share: true
       related: true
-      sidebar: true
+      sidebar:
+        nav: "docs"
   # _docs
   - scope:
       path: ""
