--- a/_config.yml
+++ b/_config.yml
@@ -290,10 +290,10 @@ defaults:
       sidebar:
         nav: "docs"
   # _docs
-  - scope:
-      path: ""
-      type: docs
-    values:
-      sidebar:
-        nav: "docs"
+  #- scope:
+  #    path: ""
+  #    type: docs
+  #  values:
+  #    sidebar:
+  #      nav: "docs"
         
