--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,18 +11,17 @@ main:
   # - title: "Sitemap"
   #   url: /sitemap/
   
-# test
 docs:
-  - title: Getting Started
+  - title: Programming Languages
     children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
-      - title: "Structure"
-        url: /docs/structure/
-      - title: "Installation"
-        url: /docs/installation/
-      - title: "Upgrading"
-        url: /docs/upgrading/
+      - title: "JAVA"
+        url: /categories/java/
+      #- title: "Structure"
+      #  url: /docs/structure/
+      #- title: "Installation"
+      #  url: /docs/installation/
+      #- title: "Upgrading"
+      #  url: /docs/upgrading/
 
   - title: Customization
     children:
