--- a/_config.yml
+++ b/_config.yml
@@ -283,10 +283,18 @@ defaults:
     values:
       layout: single
       author_profile: true
-      read_time: true
       comments: # true
       share: true
       related: true
+      sidebar:
+        nav: "docs"
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+     values:
+      layout: single
+      author_profile: true
       sidebar:
         nav: "docs"
   # _docs
