--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,54 +4,27 @@ main:
     url: /about/
   - title: "Category"
     url: /categories/
-  # - title: "Sample Posts"
-  #   url: /year-archive/
-  # - title: "Sample Collections"
-  #   url: /collection-archive/
-  # - title: "Sitemap"
-  #   url: /sitemap/
   
 docs:
   - title: Programming Languages
     children:
       - title: "JAVA"
         url: /categories/java/
-      #- title: "Structure"
-      #  url: /docs/structure/
-      #- title: "Installation"
-      #  url: /docs/installation/
-      #- title: "Upgrading"
-      #  url: /docs/upgrading/
 
-  - title: Customization
+  - title: Computer Science
     children:
-      - title: "Configuration"
+      - title: "Network"
         url: /docs/configuration/
-      - title: "Navigation"
-        url: /docs/navigation/
-      - title: "UI Text"
-        url: /docs/ui-text/
-      - title: "Authors"
-        url: /docs/authors/
-      - title: "Layouts"
-        url: /docs/layouts/
 
-  - title: Content
+  - title: Git
     children:
-      - title: "Working with Posts"
+      - title: "Blog"
         url: /docs/posts/
-      - title: "Working with Pages"
+      - title: "GitHub"
         url: /docs/pages/
-      - title: "Working with Collections"
-        url: /docs/collections/
-      - title: "Helpers"
-        url: /docs/helpers/
-      - title: "Utility Classes"
-        url: /docs/utility-classes/
 
-  - title: Extras
+  - title: Test
     children:
-      - title: "Stylesheets"
+      - title: "SQLD"
         url: /docs/stylesheets/
-      - title: "JavaScript"
-        url: /docs/javascript/
+
